# models/book.go
@@ -39,11 +39,11 @@ type AccountTitle struct {
 }
 
 type Transaction struct {
-	TransactionId   uint64           `gorm:"primaryKey;not null;autoIncrement" json:"transaction_id"`
+	TransactionId   uint64           `gorm:"index;primaryKey;not null;autoIncrement" json:"transaction_id"`
 	BookId          string           `gorm:"primaryKey;not null" json:"book_id"`
 	Description     string           `gorm:"not null" json:"description"`
 	SubTransactions []SubTransaction `gorm:"foreignKey:TransactionId,BookId;references:TransactionId,BookId;constraint:OnDelete:CASCADE;" json:"sub_transactions"`
-	OccuredAt       time.Time        `gorm:"index" json:"occurred_at"`
+	OccurredAt      time.Time        `gorm:"index" json:"occurred_at"`
 	CreatedAt       time.Time        `json:"created_at"`
 	UpdatedAt       time.Time        `json:"updated_at"`
 }
